--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ devtools::install_github("RAJohansen/waterquality")
 
 The main function in this package is `wq_calc()`:
 
-```{r example}
+```{r example, fig.asp=0.33}
 library(waterquality)
 library(raster)
 s2 = stack(system.file("raster/S2_Taylorsville.tif", package = "waterquality"))
