--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -35,7 +35,7 @@ However, for our example we will use a William H. Harsha Lake (East Fork Lake) l
 The imager provided will be a Sentinel-2 product because multiple studies have demonstrated that Sentinel-2 has the optimal spatial and spectral configurations for detecting CHABs in this location (Cite Beck et al. 2017, Johansen et al. 2018, Xu et al. 2018 (in review)).
 
 Sentinel-2 is freely downloadable but does require you to create an account on the European Space Agency's (ESA) Copernicus Hub (https://scihub.copernicus.eu) or using the United States Geologic Survey's (USGS) Earth Explorer (https://earthexplorer.usgs.gov).
-Then you will be able to log into the Open Access Hub and search for available imagery. Raw Sentinel-2 imagery is can be difficult to deal with, so we developed a script called Data_Preprocessing.R, which convert the full scene imagery which very large and contains bands with differing spatial resolutions to final cropped and stacked image of your Area of Interest (AOI). Typically this products are uncorrected top of atmosphere (ToA) reflectance, also known as level 1C products. It is highly recommended to atmospherically correct your imagery to bottom of atmosphere (BoA) reflectance before continuing the process. Xu et al. 2018 (in review) provides an evaluation of atmospheric correction techniques (FlAASH, QUAC, and Sen2Cor) effects on the detection of CHABs using Sentinel-2. Choosing the appropiate method is user specific, which can be based on image quality, available in situ measurments, cost, and preference. As of now this process is up to the user to decide and implement, but it is our hope to make this process even easier by embedding the R package Sen2R into this section. Sen2R is a package that allows a user to search, download, and atmospherically correct Sentinel-2 Imagery directly from R (Ranghetti and Busetto 2018). 
+Then you will be able to log into the Open Access Hub and search for available imagery. Raw Sentinel-2 imagery is can be difficult to deal with, so we developed a script called Data_Preprocessing.R, which convert the full scene imagery which very large and contains bands with differing spatial resolutions to final cropped and stacked image of your Area of Interest (AOI). Typically this products are uncorrected top of atmosphere (ToA) reflectance, also known as level 1C products. It is highly recommended to atmospherically correct your imagery to bottom of atmosphere (BoA) reflectance before continuing the process. Xu et al. 2018 (in review) provides an evaluation of atmospheric correction techniques (FlAASH, QUAC, Sen2Cor, ELM) effects on the detection of CHABs using Sentinel-2. Choosing the appropiate method is user specific, which can be based on image quality, available in situ measurments, cost, and preference. As of now this process is up to the user to decide and implement, but it is our hope to make this process even easier by embedding the R package Sen2R into this section. Sen2R is a package that allows a user to search, download, and atmospherically correct Sentinel-2 Imagery directly from R (Ranghetti and Busetto 2018). 
 
 ### Data Tuning
 
@@ -165,4 +165,4 @@ Wynne, T.T.; Stumpf, R.P. Spatial and Temporal Patterns in the Seasonal Distribu
 
 Wozniak M, Bradtke KM, Darecki M, Krezel A. 2016. Empirical Model for Phycocyanin Concentration Estimation as an Indicator of Cyanobacterial Bloom in the Optically Complex CoastalWaters of the Baltic Sea. Remote Sens. 8, 1–23
 
-Xu et al. 2018 (in review)
+Xu M, Liu H, Beck R, Lekki J, Benko T, Anderson R, Yang B, Johansen R, Emery E, Reif M. 2018. Regionally and Locally Adaptive Models for Retrieving Chlorophyll-a Concentrations in Inland Waters from Remotely Sensse Multispectral and Hyperspectral Imagery. IEEE Transactions on Geoscience and Remote Sensing. (In Review)
