--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -171,7 +171,7 @@ The main function of this package is called `wq_calc()` which calculates water q
 ```{r, message=FALSE}
 library(waterquality)
 library(raster)
-Harsha <- stack(system.file("raster/Harsha_Lake.tif", package = "waterquality"))
+Harsha <- stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 ```
 
 ## Single Algorithm
